--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-ejfinanciera-gbftrec/tabla-ejfinanciera-gbftrec.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-balan-financ-trasl-recursos/components/tabla-ejfinanciera-gbftrec/tabla-ejfinanciera-gbftrec.component.html
@@ -24,8 +24,12 @@
       </ng-container>
       <ng-container matColumnDef="porcentajeEjecucionFinanciera">
         <th mat-header-cell *matHeaderCellDef mat-sort-header style="width: 20%;"> Porcentaje de ejecución financiera </th>
-        <td mat-cell *matCellDef="let element" align="center" class="color-text"> {{ element.porcentajeEjecucionFinanciera | number:'.0-2' }}% </td>
-        <td *matFooterCellDef align="center" style="border-right: 1px solid; border-bottom: 1px solid;">{{ total.porcentajeEjecucionFinanciera | number:'.0-2' }}%</td>
+        <td mat-cell *matCellDef="let element" align="center" class="color-text">
+          {{ element.porcentajeEjecucionFinanciera ? (element.porcentajeEjecucionFinanciera | number: '.0-2') : 0 }}%
+        </td>
+        <td *matFooterCellDef align="center" style="border-right: 1px solid; border-bottom: 1px solid">
+          {{ total.porcentajeEjecucionFinanciera ? (total.porcentajeEjecucionFinanciera | number: '.0-2') : 0 }}%
+        </td>
       </ng-container>
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
