--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/crear-orden-del-dia/crear-orden-del-dia.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/crear-orden-del-dia/crear-orden-del-dia.component.html
@@ -41,7 +41,7 @@
       <div >
         <div class="text-center mt-2em d-flex align-items-center">
           <section class="example-section">
-            <mat-checkbox [checked]="seleccionarTodos" (change)="selectAll($event.checked)"><span class="label-checkbox">Seleccionar todas las solicitudes constractuales</span></mat-checkbox>
+            <mat-checkbox [checked]="seleccionarTodos" (change)="selectAll($event.checked)"><span class="label-checkbox">Seleccionar todas las solicitudes contractuales</span></mat-checkbox>
           </section>
         </div>
         <div class="text-center d-flex align-items-center">
