--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-consultar-editar-bitacora/tabla-consultar-editar-bitacora.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/tabla-consultar-editar-bitacora/tabla-consultar-editar-bitacora.component.html
@@ -82,7 +82,7 @@
             color="accent"
             class="btn-table"
             [routerLink]="[ 'informeSemanal', 0, element.seguimientoSemanalId ]"
-            *ngIf="element.registroCompletoMuestra === true"
+            *ngIf="element.estadoRegistro === true"
             >
             Informe Semanal
            </button>
