--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/ver-detalle-contratacion/ver-detalle-contratacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-contratacion/components/ver-detalle-contratacion/ver-detalle-contratacion.component.html
@@ -145,7 +145,7 @@
           <mat-card-title class="text-area-quill--label">Descripción</mat-card-title>
           <mat-card-content class="mt-1em">
             <section>
-              <b>Observaciones</b>: <div [innerHTML]="innerObservacion( contratacion.consideracionDescripcion )"></div>
+              <div [innerHTML]="innerObservacion( contratacion.consideracionDescripcion )"></div>
             </section>
           </mat-card-content>
         </mat-card>
