--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/control-de-recursos/control-de-recursos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/control-de-recursos/control-de-recursos.component.html
@@ -182,6 +182,7 @@
                 />
               </mat-form-field>
             </div>
+            <span class="icon-incompleto"></span>
           </div>
           <div class="row" *ngIf="esVerDetalleRegistro">
             <p>
