--- a/asivamosffie.web/asivamosffie/src/assets/scss/_form.scss
+++ b/asivamosffie.web/asivamosffie/src/assets/scss/_form.scss
@@ -94,6 +94,10 @@ mat-form-field {
   padding-right: 1em;
 }
 
+.mat-select-disabled .mat-select-value {
+  color: $mainColor;
+}
+
 .mat-select-trigger {
   width: calc(100% + 2.5em);
 }
