--- a/asivamosffie.web/asivamosffie/src/app/_pages/generar-registro-presupuestal/components/cancelar-drp/cancelar-drp.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/generar-registro-presupuestal/components/cancelar-drp/cancelar-drp.component.html
@@ -25,6 +25,7 @@
         [modules]="config"
         (onContentChanged)="maxLength($event, 2000)"
         formControlName="objeto"
+        required
       ></quill-editor>
     </div>
     <span class="contador miles" *ngIf="addressForm.get('objeto').value">
