--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/nueva-solicitud-especial/nueva-solicitud-especial.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/nueva-solicitud-especial/nueva-solicitud-especial.component.html
@@ -338,6 +338,46 @@
                   </label>
                 </div>
                 <div class="col d-flex">
+                  <mat-form-field
+                    class="full-width"
+                    [matTooltipPosition]="'above'"
+                    matTooltip="Búsqueda sugerida, ingrese al menos un carácter"
+                    matTooltipClass="info-tooltip"
+                  >
+                    <input
+                      matInput
+                      #llaveMEN
+                      type="text"
+                      maxlength="50"
+                      [formControl]="myFilterLlaveMen"
+                      required
+                      [matAutocomplete]="auto2"
+                    />
+                    <mat-autocomplete #auto2="matAutocomplete">
+                      <mat-option
+                        *ngFor="let option of filteredOptions | async"
+                        [value]="option.llaveMen"
+                      >
+                        {{ option.llaveMen }}
+                      </mat-option>
+                    </mat-autocomplete>
+                  </mat-form-field>
+                  <span class="icon-incompleto">
+                    <img
+                      class="icon-incompleto--img"
+                      src="assets/img/icon/incompleto.svg"
+                      alt="este campo es requerido"
+                      [matTooltipPosition]="'above'"
+                      matTooltip="Debe ingresar la información en el campo para continuar"
+                      matTooltipClass="info-tooltip"
+                      *ngIf="
+                        (addressForm.get('llaveMEN').invalid && addressForm.get('llaveMEN').touched) ||
+                        (addressForm.get('llaveMEN').invalid && estaEditando)
+                      "
+                    />
+                  </span>
+                </div>
+                <!--<div class="col d-flex">
                   <mat-form-field class="full-width">
                     <input matInput #llaveMEN type="text" maxlength="50" formControlName="llaveMEN" required />
                   </mat-form-field>
@@ -363,7 +403,7 @@
                       "
                     />
                   </span>
-                </div>
+                </div>-->
               </div>
             </div>
           </div>
@@ -467,7 +507,7 @@
         </mat-card-title>
       </mat-card-header>
       <mat-card-content>
-        <section><b>Nombre de la entidad contratista:</b> {{ contrato.contratacion.contratista.nombre }}</section>
+        <section><b>Nombre de la entidad contratista:</b> {{ contrato?.contratacion?.contratista?.nombre }}</section>
       </mat-card-content>
     </mat-card>
 
@@ -574,7 +614,7 @@
             </div>
           </div>
         </div>
-        <div class="row">
+        <div class="row" *ngIf="addressForm.get('tipoAportante').value != '1'">
           <div class="col-md-8">
             <div class="row">
               <div class="pr-1">
