--- a/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/nueva-solicitud-especial/nueva-solicitud-especial.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/solicitar-disponibilidad-presupuestal/components/nueva-solicitud-especial/nueva-solicitud-especial.component.html
@@ -614,7 +614,7 @@
             </div>
           </div>
         </div>
-        <div class="row" *ngIf="addressForm.get('tipoAportante').value != '1'">
+        <div class="row">
           <div class="col-md-8">
             <div class="row">
               <div class="pr-1">
