--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/con-validacion-presupuestal/con-validacion-presupuestal.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/con-validacion-presupuestal/con-validacion-presupuestal.component.html
@@ -179,8 +179,7 @@
     <button mat-raised-button color="accent" (click)="download()" *ngIf="detailavailabilityBudget?.numeroDDP">
       Descargar DDP
     </button>
-
-    <button [disabled]="(detailavailabilityBudget?.tieneNovedad == true && esNovedad == false) || (detailavailabilityBudget?.estadoStr == 'Con registro presupuestal')" mat-raised-button color="accent" (click)="openDialogCancelarDDP()">Cancelar solicitud DDP</button>
+    <button [disabled]="(detailavailabilityBudget?.tieneNovedad == true && esNovedad == false) || (detailavailabilityBudget?.tieneSolicitudPago == true) || (detailavailabilityBudget?.tieneHistorico == true) || detailavailabilityBudget?.estadoSolicitudCodigo == '8'" (click)="openDialogCancelarDDP()">Cancelar solicitud DDP</button>
 
   </div>
 </section>
