--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/tabla-con-validacion/tabla-con-validacion.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/tabla-con-validacion/tabla-con-validacion.component.html
@@ -8,7 +8,9 @@
     </button>
 </div>
 <div class="table-responsive">
-    <table mat-table [dataSource]="dataSource" matSort class="text-center">
+    <table mat-table [dataSource]="dataSource" matSort class="text-center"
+        [matSortActive]="incompretos ? 'estadoRegistro': null" matSortDirection="asc"
+    >
 
         <ng-container matColumnDef="fecha">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> Fecha de la solicitud </th>
