--- a/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/validar/validar.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/validar-disponibilidad-presupuesto/components/validar/validar.component.html
@@ -51,72 +51,73 @@
                                       "
                                 [esGenerar] = "disponibilidad.nombreEstado=='Con disponibilidad presupuestal' ? true : false"
                                 [esLiberacion] = "disponibilidad.nombreEstado=='Liberación de saldo' ? true : false"
+                                [incompretos]="incompretos"
                                 >
       </app-tabla-con-validacion>
       <app-tabla-rechasada-por-validacion [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='Rechazada por validación presupuestal'"></app-tabla-rechasada-por-validacion>
       <app-tabla-con-disponibilidad-cancelada [disponibilidadPresupuestal]="disponibilidad" *ngIf="disponibilidad.nombreEstado=='Con disponibilidad cancelada'"></app-tabla-con-disponibilidad-cancelada>
     </mat-expansion-panel>
   </mat-accordion>
-
-
-  <!-- <mat-accordion *ngIf="false">
-    <mat-expansion-panel class="expansion-style">
-      <mat-expansion-panel-header class="expansion-style--header">
-        <mat-panel-title class="expansion-style--title sin-diligenciar">
-          En validación presupuestal
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-      <app-tabla-en-validacion></app-tabla-en-validacion>
-    </mat-expansion-panel>
-    <mat-expansion-panel class="expansion-style">
-      <mat-expansion-panel-header class="expansion-style--header">
-        <mat-panel-title class="expansion-style--title sin-diligenciar">
-          Devuelta por coordinación financiera
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-      <app-tabla-devuelta-por-coordinacion></app-tabla-devuelta-por-coordinacion>
-    </mat-expansion-panel>
-    <mat-expansion-panel class="expansion-style">
-      <mat-expansion-panel-header class="expansion-style--header">
-        <mat-panel-title class="expansion-style--title"
-        [ngClass]="{'sin-diligenciar':devueltaPresupuestal_class===0,'en-proceso':devueltaPresupuestal_class===1,'completo':devueltaPresupuestal_class===2}"
-        >
-          Devuelta por validación presupuestal
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-      <app-tabla-devuelta-por-validacion></app-tabla-devuelta-por-validacion>
-    </mat-expansion-panel>
-    <mat-expansion-panel class="expansion-style">
-      <mat-expansion-panel-header class="expansion-style--header">
-        <mat-panel-title class="expansion-style--title">
-          Con validación presupuestal
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-      <app-tabla-con-validacion></app-tabla-con-validacion>
-    </mat-expansion-panel>
-    <mat-expansion-panel class="expansion-style">
-      <mat-expansion-panel-header class="expansion-style--header">
-        <mat-panel-title class="expansion-style--title">
-          Con disponibilidad presupuestal
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-      <app-tabla-con-validacion></app-tabla-con-validacion>
-    </mat-expansion-panel>
-    <mat-expansion-panel class="expansion-style">
-      <mat-expansion-panel-header class="expansion-style--header">
-        <mat-panel-title class="expansion-style--title">
-          Rechazada por validación presupuestal
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-      <app-tabla-rechasada-por-validacion></app-tabla-rechasada-por-validacion>
-    </mat-expansion-panel>
-    <mat-expansion-panel class="expansion-style">
-      <mat-expansion-panel-header class="expansion-style--header">
-        <mat-panel-title class="expansion-style--title">
-          Con disponibilidad cancelada
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-      <app-tabla-con-disponibilidad-cancelada></app-tabla-con-disponibilidad-cancelada>
-    </mat-expansion-panel>
-  </mat-accordion> -->
 </section>
+
+
+<!-- <mat-accordion *ngIf="false">
+  <mat-expansion-panel class="expansion-style">
+    <mat-expansion-panel-header class="expansion-style--header">
+      <mat-panel-title class="expansion-style--title sin-diligenciar">
+        En validación presupuestal
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <app-tabla-en-validacion></app-tabla-en-validacion>
+  </mat-expansion-panel>
+  <mat-expansion-panel class="expansion-style">
+    <mat-expansion-panel-header class="expansion-style--header">
+      <mat-panel-title class="expansion-style--title sin-diligenciar">
+        Devuelta por coordinación financiera
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <app-tabla-devuelta-por-coordinacion></app-tabla-devuelta-por-coordinacion>
+  </mat-expansion-panel>
+  <mat-expansion-panel class="expansion-style">
+    <mat-expansion-panel-header class="expansion-style--header">
+      <mat-panel-title class="expansion-style--title"
+      [ngClass]="{'sin-diligenciar':devueltaPresupuestal_class===0,'en-proceso':devueltaPresupuestal_class===1,'completo':devueltaPresupuestal_class===2}"
+      >
+        Devuelta por validación presupuestal
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <app-tabla-devuelta-por-validacion></app-tabla-devuelta-por-validacion>
+  </mat-expansion-panel>
+  <mat-expansion-panel class="expansion-style">
+    <mat-expansion-panel-header class="expansion-style--header">
+      <mat-panel-title class="expansion-style--title">
+        Con validación presupuestal
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <app-tabla-con-validacion></app-tabla-con-validacion>
+  </mat-expansion-panel>
+  <mat-expansion-panel class="expansion-style">
+    <mat-expansion-panel-header class="expansion-style--header">
+      <mat-panel-title class="expansion-style--title">
+        Con disponibilidad presupuestal
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <app-tabla-con-validacion></app-tabla-con-validacion>
+  </mat-expansion-panel>
+  <mat-expansion-panel class="expansion-style">
+    <mat-expansion-panel-header class="expansion-style--header">
+      <mat-panel-title class="expansion-style--title">
+        Rechazada por validación presupuestal
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <app-tabla-rechasada-por-validacion></app-tabla-rechasada-por-validacion>
+  </mat-expansion-panel>
+  <mat-expansion-panel class="expansion-style">
+    <mat-expansion-panel-header class="expansion-style--header">
+      <mat-panel-title class="expansion-style--title">
+        Con disponibilidad cancelada
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <app-tabla-con-disponibilidad-cancelada></app-tabla-con-disponibilidad-cancelada>
+  </mat-expansion-panel>
+</mat-accordion> -->
