--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/table-control-recursos/table-control-recursos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/table-control-recursos/table-control-recursos.component.html
@@ -48,13 +48,13 @@
       <ng-container matColumnDef="controlRecursoId">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Gestión</th>
         <td mat-cell *matCellDef="let element">
-          <button *ngIf="!esVerDetalle" mat-raised-button color="accent" class="btn-table" (click)="editar(element.controlRecursoId)">
+          <button *ngIf="!esVerDetalle && (idFuente == element.fuenteFinanciacionId)" mat-raised-button color="accent" class="btn-table" (click)="editar(element.controlRecursoId)">
             Ver detalle/<br />Editar
           </button>
-          <button *ngIf="!esVerDetalle || (element.lastOne == true && esVerDetalle)" mat-raised-button color="accent" class="btn-table" (click)="eliminar(element)">
+          <button *ngIf="(!esVerDetalle || (element.lastOne == true && esVerDetalle)) && (idFuente == element.fuenteFinanciacionId)" mat-raised-button color="accent" class="btn-table" (click)="eliminar(element)">
             Eliminar
           </button>
-          <button *ngIf="esVerDetalle" mat-raised-button color="accent" class="btn-table" (click)="verDetalle(element.controlRecursoId)">
+          <button *ngIf="esVerDetalle || (idFuente != element.fuenteFinanciacionId)" mat-raised-button color="accent" class="btn-table" (click)="verDetalle(element.controlRecursoId, element.fuenteFinanciacionId)">
             Ver detalle
           </button>
         </td>
