https://asivamosffie.atlassian.net/browse/RDS-53

--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/registrar/registrar.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/registrar/registrar.component.html
@@ -512,7 +512,7 @@
                 </div>
                 <div class="col">
                   <mat-form-field class="select-width">
-                    <mat-select formControlName="fuenteRecursos" required>
+                    <mat-select formControlName="fuenteRecursos" required (selectionChange)="selectChangeFuenteRecursos($event, j)">
                       <mat-option *ngFor="let fuenteDeRecursos1 of fuentesDeRecursosListaArr[j]"
                         [value]="fuenteDeRecursos1">
                         {{ fuenteDeRecursos1.nombre }}
