--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/registrar/registrar.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/registrar/registrar.component.html
@@ -58,7 +58,7 @@
           </div>
           <div class="col">
             <mat-form-field class="select-width">
-              <mat-select formControlName="nombreAportanteFFIE" (selectionChange)="changeNombreAportanteFFIE()"
+              <mat-select formControlName="nombreAportanteFFIE" (selectionChange)="changeVigenciaFfie()"
                 required>
                 <mat-option *ngFor="let nombreAportantes of nombresAportantes" [value]="nombreAportantes">
                   Vigencia: {{ nombreAportantes.cofinanciacion.vigenciaCofinanciacionId }} - Número del acuerdo:
@@ -109,7 +109,7 @@
             </div>
           </div>
         </div>-->
-        <div class="row" *ngIf="tipoAportante.FFIE.includes(tipoAportanteId.toString())">
+        <!--<div class="row" *ngIf="tipoAportante.FFIE.includes(tipoAportanteId.toString())">
           <div class="pr-1">
             <label class="label-left" [ngClass]="{
                 'color-secondaryColor':
@@ -136,7 +136,7 @@
                 (addressForm.controls.tipoDocumento.invalid && edicion)
               " />
           </span>
-        </div>
+        </div>-->
         <!--    <div class="row"  *ngIf="tipoAportante.FFIE.includes(tipoAportanteId.toString())">
           <div class="pr-1">
             <label
