--- a/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-proposiciones-varios/form-proposiciones-varios.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/comite-tecnico/components/form-proposiciones-varios/form-proposiciones-varios.component.html
@@ -203,7 +203,7 @@
   </div>
 
   <div class="text-center">
-    <button mat-button color="warn" class="btn-guardar" type="submit">
+    <button mat-button color="warn" class="btn-guardar" type="submit"  [disabled]="tema.invalid">
       <img src="assets/img/icon/guardar.svg" alt="Guardar" />
     </button>
   </div>
