--- a/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-tecnico/components/tabla-proyectos-tecnico/tabla-proyectos-tecnico.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/crear-proyecto-tecnico/components/tabla-proyectos-tecnico/tabla-proyectos-tecnico.component.html
@@ -56,9 +56,9 @@
       <th mat-header-cell *matHeaderCellDef style="text-align: center;"> Gestión </th>
       <td mat-cell *matCellDef="let gestion">
         <button mat-raised-button color="accent" class="btn-table m05_important" type="button"
-          (click)="ver(gestion.id)" *ngIf="gestion.estado!='COMPLETO'">Ver detalle /<br>Editar</button>
+          (click)="ver(gestion.id, gestion.estado!='COMPLETO')" *ngIf="gestion.estado!='COMPLETO'">Ver detalle /<br>Editar</button>
           <button mat-raised-button color="accent" class="btn-table m05_important" type="button"
-          (click)="ver(gestion.id)" *ngIf="gestion.estado=='COMPLETO'">Ver detalle</button>
+          (click)="ver(gestion.id, gestion.estado=='COMPLETO')" *ngIf="gestion.estado=='COMPLETO'">Ver detalle</button>
         <button mat-raised-button color="accent" class="btn-table m05_important" type="button"
           (click)="eliminar(gestion.id)"  *ngIf="gestion.estado!='COMPLETO'">Eliminar</button>
       </td>
