--- a/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/control-de-recursos/control-de-recursos.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/gestionar-fuentes-de-financiacion/components/control-de-recursos/control-de-recursos.component.html
@@ -377,7 +377,7 @@
       </mat-card-content>
     </mat-card>
     <div class="text-center" *ngIf="!esVerDetalleRegistro">
-      <button mat-button color="warn" class="btn-guardar" type="submit">
+      <button mat-button color="warn" class="btn-guardar" type="submit" [disabled]="addressForm.invalid">
         <img src="assets/img/icon/guardar.svg" alt="Guardar" />
       </button>
     </div>
