--- a/asivamosffie.web/asivamosffie/src/assets/scss/_quill-editor.scss
+++ b/asivamosffie.web/asivamosffie/src/assets/scss/_quill-editor.scss
@@ -153,6 +153,10 @@
   .ql-editor::before {
     content: none;
   }
+
+  p {
+    overflow-wrap: anywhere;
+  }
 }
 
 .quill-editor-style.card.invalid .ql-container.ql-snow {
