https://asivamosffie.atlassian.net/browse/RDS-43

--- a/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/avance-fisico-financiero/avance-fisico-financiero.component.html
+++ b/asivamosffie.web/asivamosffie/src/app/_pages/registrar-avance-semanal/components/avance-fisico-financiero/avance-fisico-financiero.component.html
@@ -152,7 +152,10 @@
 
     <mat-expansion-panel
       class="expansion-style sub-expansion"
-      *ngIf="seguimientoSemanal.infoProyecto.estadoObra !== 'Con ejecución normal'"
+      *ngIf="
+        seguimientoSemanal.infoProyecto.estadoObra !== 'Con ejecución normal' ||
+        seguimientoSemanal.seguimientoSemanalAvanceFisico.length > 0
+      "
     >
       <mat-expansion-panel-header class="expansion-style--header">
         <mat-panel-title class="expansion-style--title"> Observaciones </mat-panel-title>
